--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,14 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
 }
 
-android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+apply from: '../android_commons.gradle'
 
+android {
     defaultConfig {
-        applicationId "com.terry.androidstandardlevel"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        applicationId AppConfig.id
+        versionCode AppConfig.versionCode
+        versionName AppConfig.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -34,12 +30,4 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
