Feat : common module(Base Activity, Fragment)

--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -6,10 +6,15 @@ android {
         minSdkVersion Vers.minSdk
         targetSdkVersion Vers.targetSdk
     }
+
     buildTypes {
         release {
             minifyEnabled true
         }
+    }
+
+    buildFeatures {
+        viewBinding true
     }
 }
 
