--- a/android_commons.gradle
+++ b/android_commons.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'kotlin-android'
+apply plugin: 'com.gaelmarhic.quadrant' // multi-module navigation helper(using manifest)
 
 android {
     compileSdkVersion Vers.compileSdk
@@ -16,6 +17,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+}
+
+quadrantConfig {
+    generateByDefault false
 }
 
 dependencies {
