--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
+        maven { url "https://plugins.gradle.org/m2/" } // quadrant(multi-module navigation helper)
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${Vers.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Vers.kotlin}"
+        classpath "gradle.plugin.com.gaelmarhic:quadrant:${Vers.moduleNav}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
