fix : Multi-Module Navigation Plugin 종속성 변경하여 duplicated file 에러 수정

--- a/android_features.gradle
+++ b/android_features.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.library'
 apply from: '../../android_commons.gradle'
+apply plugin: 'com.gaelmarhic.quadrant' // multi-module navigation helper(using manifest)
+
+quadrantConfig {
+    generateByDefault false
+}
 
 dependencies {
     implementation project(Modules.common)
