Feat : Lotto Completed
- Multi-module 패키지 네임 자동 생성 플러그인 제거(dex merge issue)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 
 apply from: '../android_commons.gradle'
-apply plugin: 'com.gaelmarhic.quadrant' // multi-module navigation helper(using manifest)
 
 android {
     defaultConfig {
@@ -29,10 +28,7 @@ android {
     }
 }
 
-quadrantConfig {
-    generateByDefault false
-}
-
 dependencies {
     implementation project(Modules.bmi)
+    implementation project(Modules.lotto)
 }
