--- a/features/lotto/src/main/AndroidManifest.xml
+++ b/features/lotto/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.terry.lotto">
-<!--    <intent-filter>-->
-<!--        <action android:name="android.intent.action.MAIN" />-->
 
-<!--        <category android:name="android.intent.category.LAUNCHER" />-->
-<!--    </intent-filter>-->
+    <application>
+        <activity android:name=".LottoMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
 </manifest>
