Feat : Diary Completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ android {
 dependencies {
     implementation project(Modules.bmi)
     implementation project(Modules.lotto)
+    implementation project(Modules.diary)
 }
