--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     implementation project(Modules.bmi)
     implementation project(Modules.lotto)
     implementation project(Modules.diary)
+    implementation project(Modules.calculator)
 }
