--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':app'
 include ':common'
 include ':features:bmi', ':features:lotto'
 include ':features:diary'
+include ':features:calculator'
