Feat : Calculator Completed

--- a/android_features.gradle
+++ b/android_features.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply from: '../../android_commons.gradle'
+apply plugin: 'kotlin-kapt'
 
 dependencies {
     implementation project(Modules.common)
