--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include ':common'
 include ':features:bmi', ':features:lotto'
 include ':features:diary'
 include ':features:calculator'
+include ':features:frame'
