Feat : Frame (2/2) completed.
- 시작하기의 예외처리 추가

--- a/features/frame/src/main/AndroidManifest.xml
+++ b/features/frame/src/main/AndroidManifest.xml
@@ -5,7 +5,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application>
-        <activity android:name=".PhotoFrameActivity"></activity>
+        <activity
+            android:name=".PhotoFrameActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.AndroidStandardLevel.NoActionBar">
+
+        </activity>
         <activity android:name=".FrameMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
