--- a/features/calculator/src/main/AndroidManifest.xml
+++ b/features/calculator/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.thkim.calculator">
+
+    <dist:module
+        dist:instant="false"
+        dist:title="calculator">
+        <dist:delivery>
+            <dist:on-demand />
+        </dist:delivery>
+
+        <dist:fusing dist:include="true" />
+    </dist:module>
 
     <application>
         <activity android:name=".CalculatorMainActivity">
