--- a/features/diary/src/main/AndroidManifest.xml
+++ b/features/diary/src/main/AndroidManifest.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.thkim.diary">
+
+    <dist:module
+        dist:instant="false"
+        dist:title="diary">
+        <dist:delivery>
+            <dist:on-demand />
+        </dist:delivery>
+
+        <dist:fusing dist:include="true" />
+    </dist:module>
 
     <application>
         <activity
             android:name=".DiaryActivity"
-            android:theme="@style/Theme.AndroidStandardLevel.NoActionBr">
+            android:theme="@style/Theme.Diary.NoActionBar">
 
         </activity>
 
         <activity
             android:name=".DiaryMainActivity"
-            android:theme="@style/Theme.AndroidStandardLevel.NoActionBr">
+            android:theme="@style/Theme.Diary.NoActionBar">
 
         </activity>
     </application>
