Feat : MainActivity에서 각 Feature Activity로 이동하도록 수정(UI 없음)

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include ':features:bmi', ':features:lotto'
 include ':features:diary'
 include ':features:calculator'
 include ':features:frame'
+include ':features:pomodoro'
