--- a/features/pomodoro/src/main/AndroidManifest.xml
+++ b/features/pomodoro/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.terry.frame">
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    package="com.terry.pomodoro">
 
     <dist:module
         dist:instant="false"
-        dist:title="frame">
+        dist:title="@string/title_pomodoro">
         <dist:delivery>
             <dist:on-demand />
         </dist:delivery>
@@ -16,13 +14,7 @@
     </dist:module>
 
     <application>
-        <activity
-            android:name=".PhotoFrameActivity"
-            android:screenOrientation="landscape"
-            android:theme="@style/Theme.Frame.NoActionBar">
-
-        </activity>
-        <activity android:name=".FrameMainActivity">
+        <activity android:name=".PomodoroMainActivity">
 
         </activity>
     </application>
