Feat : Recorder Module 생성 및 Gradle, Base 초기 설정

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include ':features:calculator'
 include ':features:frame'
 include ':features:pomodoro'
 include ':repository'
+include ':features:recorder'
