Refactor : features 하위 모듈 이름을 PascalCase로 변경

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,10 +2,10 @@ rootProject.name = "AndroidStandardLevel"
 include ':app'
 include ':core'
 include ':local'
-include ':features:bmi', ':features:lotto'
-include ':features:diary'
-include ':features:calculator'
-include ':features:frame'
-include ':features:pomodoro'
+include ':features:Bmi', ':features:Lotto'
+include ':features:Diary'
+include ':features:Calculator'
+include ':features:Frame'
+include ':features:Pomodoro'
 include ':repository'
-include ':features:recorder'
+include ':features:AudioRecorder'
