Feat : initial WebViewer Module created

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include ':features:Frame'
 include ':features:Pomodoro'
 include ':repository'
 include ':features:AudioRecorder'
+include ':features:WebViewer'
