--- a/features/WebViewer/src/main/AndroidManifest.xml
+++ b/features/WebViewer/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.webviewer">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_webviewer">
@@ -13,8 +15,11 @@
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application>
-        <activity android:name=".WebViewerMainActivity"></activity>
+    <application
+        android:usesCleartextTraffic="true"> <!-- clear Text 사용 옵션(http 를 지원하는 옵션) -->
+        <activity android:name=".WebViewerMainActivity">
+
+        </activity>
     </application>
 
 </manifest>
