Feat : Initialize Notification Feature Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':features:Pomodoro'
 include ':repository'
 include ':features:AudioRecorder'
 include ':features:WebViewer'
+include ':features:Notification'
