Feat : Initialize RemoteConfig Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include ':repository'
 include ':features:AudioRecorder'
 include ':features:WebViewer'
 include ':features:Notification'
+include ':features:RemoteConfig'
