Feat : Remote Config UI 개선 사항 구현
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/RemoteConfig/src/main/AndroidManifest.xml
+++ b/features/RemoteConfig/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".SayingMainActivity"></activity>
+        <activity
+            android:name=".SayingMainActivity"
+            android:theme="@style/Theme.AndroidStandardLevel.RemoteConfig">
+
+        </activity>
     </application>
 
 </manifest>
