--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include ':features:AudioRecorder'
 include ':features:WebViewer'
 include ':features:Notification'
 include ':features:RemoteConfig'
+include ':features:Alarm'
