Feat : Alarm 기본 레이아웃 구성 완료
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Alarm/src/main/AndroidManifest.xml
+++ b/features/Alarm/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".AlarmMainActivity"></activity>
+        <activity
+            android:name=".AlarmMainActivity"
+            android:theme="@style/Theme.AndroidStandardLevel.Alarm">
+
+        </activity>
     </application>
 
 </manifest>
