--- a/features/Alarm/src/main/AndroidManifest.xml
+++ b/features/Alarm/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:theme="@style/Theme.AndroidStandardLevel.Alarm">
 
         </activity>
+        <receiver
+            android:name=".AlarmReceiver"
+            android:exported="false" />
     </application>
 
 </manifest>
