--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,4 @@ include ':features:WebViewer'
 include ':features:Notification'
 include ':features:RemoteConfig'
 include ':features:Alarm'
+include ':features:books'
