--- a/features/books/src/main/AndroidManifest.xml
+++ b/features/books/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.books">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_books">
@@ -13,8 +15,10 @@
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application>
-        <activity android:name=".BooksMainActivity"></activity>
+    <application android:usesCleartextTraffic="true">
+        <activity android:name=".BooksMainActivity">
+
+        </activity>
     </application>
 
 </manifest>
