--- a/features/books/src/main/AndroidManifest.xml
+++ b/features/books/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <activity android:name=".BooksMainActivity">
 
         </activity>
+
+        <activity android:name=".BookDetailActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
