Feat : Remote Multi Module 설계 및 구현
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,9 @@ rootProject.name = "AndroidStandardLevel"
 include ':app'
 include ':core'
 include ':local'
-include ':features:Bmi', ':features:Lotto'
+include ':remote'
+include ':features:Bmi'
+include ':features:Lotto'
 include ':features:Diary'
 include ':features:Calculator'
 include ':features:Frame'
