Feat : Initialize Tinder Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include ':features:Notification'
 include ':features:RemoteConfig'
 include ':features:Alarm'
 include ':features:books'
+include ':features:Tinder'
