--- a/features/Tinder/src/main/AndroidManifest.xml
+++ b/features/Tinder/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".MatchedUserActivity" />
 
     </application>
 </manifest>
