Feat : Initialize Transaction Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include ':features:RemoteConfig'
 include ':features:Alarm'
 include ':features:books'
 include ':features:Tinder'
+include ':features:Transaction'
