Feat : Firebase DB와 연동하여 홈에서 데이터를 보여주기 구현
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Transaction/src/main/AndroidManifest.xml
+++ b/features/Transaction/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".TransactionMainActivity"></activity>
+        <activity
+            android:name=".TransactionMainActivity"
+            android:theme="@style/Theme.AndroidStandardLevel.Transaction">
+
+        </activity>
     </application>
 
 </manifest>
