--- a/features/Transaction/src/main/AndroidManifest.xml
+++ b/features/Transaction/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.transaction">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_transaction">
@@ -19,6 +22,8 @@
             android:theme="@style/Theme.AndroidStandardLevel.Transaction">
 
         </activity>
+
+        <activity android:name=".home.AddArticleActivity" />
     </application>
 
 </manifest>
