Feat : 이미지 업로드 기능 추가
- Firebase Storage 로 기능 구현

Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Transaction/src/main/AndroidManifest.xml
+++ b/features/Transaction/src/main/AndroidManifest.xml
@@ -19,11 +19,15 @@
     <application>
         <activity
             android:name=".TransactionMainActivity"
-            android:theme="@style/Theme.AndroidStandardLevel.Transaction">
+            android:theme="@style/Theme.AndroidStandardLevel.Transaction.NoActionBar">
 
         </activity>
 
-        <activity android:name=".home.AddArticleActivity" />
+        <activity
+            android:name=".home.AddArticleActivity"
+            android:theme="@style/Theme.AndroidStandardLevel.Transaction.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
