Feat : 기본 기능 완료(고도화 TODO 리스트로 메모)
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Transaction/src/main/AndroidManifest.xml
+++ b/features/Transaction/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:theme="@style/Theme.AndroidStandardLevel.Transaction.NoActionBar">
 
         </activity>
+
+        <activity android:name=".chatdetail.ChatRoomActivity" />
     </application>
 
 </manifest>
