--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':features:Alarm'
 include ':features:books'
 include ':features:Tinder'
 include ':features:Transaction'
+include ':features:Airbnb'
