--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':features:books'
 include ':features:Tinder'
 include ':features:Transaction'
 include ':features:Airbnb'
+include ':features:VideoPlayer'
