--- a/features/VideoPlayer/src/main/AndroidManifest.xml
+++ b/features/VideoPlayer/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.videoplayer">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_videoplayer">
@@ -14,7 +16,9 @@
     </dist:module>
 
     <application>
-        <activity android:name=".VideoMainActivity"></activity>
+        <activity android:name=".VideoMainActivity">
+
+        </activity>
     </application>
 
 </manifest>
