Feat : AudioPlayer play UI
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/AudioPlayer/src/main/AndroidManifest.xml
+++ b/features/AudioPlayer/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
     </dist:module>
 
     <application>
-        <activity android:name=".AudioMainActivity"></activity>
+        <activity
+            android:name=".AudioMainActivity"
+            android:theme="@style/Theme.AndroidStandardLevel.AudioPlayer.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
