--- a/settings.gradle
+++ b/settings.gradle
@@ -20,4 +20,4 @@ include ':features:Tinder'
 include ':features:Transaction'
 include ':features:Airbnb'
 include ':features:VideoPlayer'
-include ':features:AudioPlayer'
+include ':features:MusicPlayer'
