Feat : Initialize Location Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':features:Transaction'
 include ':features:Airbnb'
 include ':features:VideoPlayer'
 include ':features:MusicPlayer'
+include ':features:Location'
