--- a/features/Location/src/main/AndroidManifest.xml
+++ b/features/Location/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.location">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_location">
@@ -17,6 +21,13 @@
         <activity
             android:name=".LocationMainActivity"
             android:exported="true" />
+
+        <activity android:name=".MapActivity" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_key" />
+
     </application>
 
 </manifest>
