Feat : Initialize MotionIntro Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include ':features:Airbnb'
 include ':features:VideoPlayer'
 include ':features:MusicPlayer'
 include ':features:Location'
+include ':features:MotionIntro'
