--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':features:MusicPlayer'
 include ':features:Location'
 include ':features:Architecture'
 include ':features:WeeklyStudy'
+include ':features:MotionIntro'
