Feat : Initialize Appbar & Image Motion layout
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/MotionIntro/src/main/AndroidManifest.xml
+++ b/features/MotionIntro/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <application>
         <activity
             android:name=".MotionIntroMainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.AndroidStandardLevel.MotionIntro.AppBarOverlay" />
     </application>
 
 </manifest>
