--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':features:VideoPlayer'
 include ':features:MusicPlayer'
 include ':features:Location'
 include ':features:Architecture'
+include ':features:WeeklyStudy'
