Fix : Architecture Common Model로 변경
- 각 Architecture에서 공통 Model을 참조하고 있으므로 하나의 Model 클래스로 변경

Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Architecture/src/main/AndroidManifest.xml
+++ b/features/Architecture/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             android:name=".ArchitectureMainActivity"
             android:exported="true" />
         <activity
+            android:name=".mvvm.MvvmMainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AndroidStandardLevel.Architecture.NoActionBar" />
+        <activity
             android:name=".mvp.MvpMainActivity"
             android:exported="true"
             android:theme="@style/Theme.AndroidStandardLevel.Architecture.NoActionBar" />
