Feat : Initialize `Github Repo` Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include ':features:Location'
 include ':features:Architecture'
 include ':features:WeeklyStudy'
 include ':features:MotionIntro'
+include ':features:GithubRepo'
