Add : Permission and intent filter in Manifest
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/GithubRepo/src/main/AndroidManifest.xml
+++ b/features/GithubRepo/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.terry.githubrepo">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_githubrepo">
@@ -16,7 +18,20 @@
     <application>
         <activity
             android:name=".GithubMainActivity"
-            android:exported="true" />
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="github-auth"
+                    android:scheme="android-standard-level" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
